...

enum class AppDestination(
    val label: String,
    val icon: ImageVector,
) {
    Inicio("Inicio", Icons.Outlined.Home),
    Pendientes("Pendientes", Icons.Outlined.CheckCircle),
    Listas("Listas", Icons.AutoMirrored.Outlined.List),
    Memoria("Memoria", Icons.Outlined.Search),
}

